RESOLVED FIXED18734
REGRESSION (r31081): Focus problems in Gmail 2/Plain text message text
https://bugs.webkit.org/show_bug.cgi?id=18734
Summary REGRESSION (r31081): Focus problems in Gmail 2/Plain text message text
Ruben Bakker
Reported 2008-04-24 23:07:48 PDT
Summary: When replying to a message in Gmail 2 using "Plain text" message text, focus will be lost when moving the mouse out of the message text. Only the first character typed will be entered at the beginning of the text, all others will appear at the end of the reply. Steps to Reproduce: 1. Log into gmail http://mail.google.com (make sure you have the new version (Gmail 2)) 2. Compose a new message and click "Plain text", Gmail will set "Plain text" as your default 3. Cancel the new message to go back to your inbox 4. Open a conversation in your inbox 5. Click into the reply field to reply to the message 6. Before typing, move the mouse out of the message text - the caret will become invisible 7. Type some characters Expected Results: Focus remains in the message text, all characters are entered correctly Actual Results: - The first character will appear correctly all other characters will go to the end of the message - The caret should stay visible in the reply field Regression: - Happens with Gmail 2 (the newer version) - The problem can only be duplicated with "Plain text", "Rich text" works Notes: - The problem was introduced with ChangeSet http://trac.webkit.org/projects/webkit/changeset/31081 - by undoing this change, focus works correctly. - The bug has been duplicated with WebKit 32531
Attachments
patch in progress -- needs regression tests (695 bytes, patch)
2008-12-12 17:11 PST, Darin Adler
no flags
patch (7.45 KB, patch)
2008-12-13 14:36 PST, Darin Adler
mitz: review+
David Kilzer (:ddkilzer)
Comment 1 2008-04-26 13:51:40 PDT
Confirmed with WebKit nightly build r32531. Works correctly with Safari 3.1.1 on Mac OS X Leopard. Thanks for the great bug report, Ruben, and finding where this regressed!
David Kilzer (:ddkilzer)
Comment 2 2008-04-26 13:54:59 PDT
Darin Adler
Comment 3 2008-12-12 17:10:32 PST
I have a fix for this in my tree. Need to make some regression tests now.
Darin Adler
Comment 4 2008-12-12 17:11:47 PST
Created attachment 25993 [details] patch in progress -- needs regression tests
Ruben Bakker
Comment 5 2008-12-13 04:34:56 PST
(In reply to comment #4) > Created an attachment (id=25993) [review] > patch in progress -- needs regression tests > I am the bug reporter: I am not sure if you addressed me by this comment :) BTW: There is a similar focus bug with Gmail 2/Rich text, someone reported this bug: https://bugs.webkit.org/show_bug.cgi?id=14925
Darin Adler
Comment 6 2008-12-13 11:27:03 PST
(In reply to comment #5) > (In reply to comment #4) > > Created an attachment (id=25993) [review] [review] > > patch in progress -- needs regression tests > > I am the bug reporter: I am not sure if you addressed me by this comment :) Nope. I'm going to make the regression tests myself. I just can't land the fix without tests. No worries. Nothing for you to do. > BTW: There is a similar focus bug with Gmail 2/Rich text, someone reported this > bug: https://bugs.webkit.org/show_bug.cgi?id=14925 OK. That's got a different cause.
Darin Adler
Comment 7 2008-12-13 14:36:12 PST
mitz
Comment 8 2008-12-13 14:39:49 PST
Comment on attachment 26005 [details] patch > + ta.selectionStart = 3; > + ta.selectionEnd = 4; > + debug("- set selection so we can test again without a trailing newline"); For consistency with the other steps, you can print the debug message before performing the action. r=me
Darin Adler
Comment 9 2008-12-13 15:02:29 PST
Note You need to log in before you can comment on or make changes to this bug.